2010-12-22  Judd Storrs  <jstorrs@gmail.com>

	* data.cc (Fvec): New optional second argument to set dimension
	of result.

2012-12-17  Konstantinos Poulios  <logari81@googlemail.com>

       * graphics.h.in (class axes::properties): Tag xtickmode, ytickmode
       and ztickmode with "u" qualifier.
       (axes::properties::update_xtickmode, axes::properties::update_ytickmode
       axes::properties::update_ztickmode): New functions.

2010-12-18  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/dlmread.cc (Fdlmread): Simplify file name/id logic.
	Bug #31910.

2010-12-17  Rik  <octave@nomad.inbox5.com>

	* oct-parse.yy (builtin): Remove seealso reference to deprecated 
	function dispatch.

2012-12-17  Konstantinos Poulios  <logari81@googlemail.com>

	* graphics.h.in (class text::properties): New properties positionmode,
	rotationmode, horizontalalignmentmode, verticalalignmentmode.
	* graphics.cc (axes::properties::init, axes::properties::set_defaults):
	Set mode to auto for all initialized positioning properties.
	(axes::properties::set_xlabel,set_ylabel,set_zlabel,set_title):
	Revert to auto-positioning mode and turn clipping off when title or
	labels are set.
	* gl-render.cc (opengl_renderer::draw_axes): Disable auto-positioning
	of manually positioned title and axes labels.

2012-12-17  Konstantinos Poulios  <logari81@googlemail.com>

	* graphics.h.in (class axes::properties): Change default value for
	fontsize from 12 to 10.
	* graphics.cc (axes::properties::set_defaults): Likewise.

2010-12-15  John W. Eaton  <jwe@octave.org>

	Bug #31883.

	* oct-hist.cc (initialize_history): Call command_history::initialize.

	* octave.cc (gripe_safe_source_exception): New function.
	(safe_source_file): New function.
	(execute_startup_files): Call safe_source_file instead of source_file.
	(execute_command_line_file): Likewise.  Don't handle exceptions here.
	(execute_eval_option_code): Also catch octave_execution	exception.

2010-12-15  John W. Eaton  <jwe@octave.org>
