@@ -1,3 +1,10 @@
+2010-12-22  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>
+
+	* input.cc (PS1): Give an example of how PS1 can use ANSI escape
+	codes for getting a colourised prompt.
+	* oct-hist.cc (history): Correct documentation about how
+	history("-r") appends to history, doesn't replace it.
+
 2010-12-22  Judd Storrs  <jstorrs@gmail.com>
 
 	* data.cc (Fvec): New optional second argument to set dimension
